--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<div class="topnav">
+  <span>KOKOKOKOKO</span>
+  <div class="login-container">
+    <form>
+      <input type="text" placeholder="Username" name="username">
+      <input type="text" placeholder="Password" name="psw">
+      <button type="submit">Login</button>
+    </form>
+  </div>
+</div>
