--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <span>KOKOKOKOKO</span>
   <div class="login-container">
     <form>
-      <input type="text" placeholder="Username" name="username">
-      <input type="text" placeholder="Password" name="psw">
+      <input type="email" placeholder="Username" name="username">
+      <input type="password" placeholder="Password" name="psw">
       <button type="submit">Login</button>
     </form>
   </div>
