add github link

--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
                 <a target="_blank" href="https://instagram.com/igorek812"><img src="img/ig.png"></a>
                 <!-- <a href="#"><img src="img/ln.png"></a> -->
                 <a target="_blank" href="https://www.youtube.com/channel/UCZDlM-MLw5AezeiIKyq7mrA"><img src="img/youtube.png"></a>
+                <a target="_blank" href="https://github.com/igorek845"><img src="img/github_icon.png"></a>
                 <a href="mailto:rykov812@gmail.com"><img src="img/email.png"></a>
         </div>
     </div>
 
-    <div id="footer">Contact: rykov812@gmail.com</div>
+    <div id="footer">
+        <span>
+            Contact: rykov812@gmail.com
+        </span>
+    </div>
 </div>
 </body>
 </html>
