--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="content">
-    
+
     <div id="header">
         /<a href="index.html">Home</a>/
         <a href="apps.html">IOS - Apps</a>/
@@ -16,20 +16,20 @@
 
     <div id="center">
         <img class="center_img pulse" src="img/photo.png" id="avatar">
-        
+
         <div id="box_text">
-			<p style="margin-bottom: 8px;font-size: 20px;">Igor Rykov</p>
+            <p style="margin-bottom: 8px;font-size: 20px;">Igor Rykov</p>
             <p style="margin-bottom: 3px;">iOS-Developer • ex QA Engineer</p>
             <p>Saint - Petersburg</p>
         </div>
 
         <div class="imgs">
-                <!-- <a href="#"><img src="img/vk.png"></a> -->
-                <a target="_blank" href="https://instagram.com/igorek812"><img src="img/ig.png"></a>
-                <!-- <a href="#"><img src="img/ln.png"></a> -->
-                <a target="_blank" href="https://www.youtube.com/channel/UCZDlM-MLw5AezeiIKyq7mrA"><img src="img/youtube.png"></a>
-                <a target="_blank" href="https://github.com/igorek845"><img src="img/github_icon.png"></a>
-                <a href="mailto:rykov812@gmail.com"><img src="img/email.png"></a>
+            <a target="_blank" href="https://instagram.com/igorek812"><img src="img/ig.png"></a>
+            <a target="_blank" href="https://hh.ru/resume/817efb64ff05285baa0039ed1f6d4872356a4e"><img src="img/hh_logo.png"></a>
+            <a target="_blank" href="https://www.linkedin.com/in/igor-rykov-741288110/"><img src="img/ln.png"></a>
+            <a target="_blank" href="https://www.youtube.com/channel/UCZDlM-MLw5AezeiIKyq7mrA"><img src="img/youtube.png"></a>
+            <a target="_blank" href="https://github.com/igorek845"><img src="img/github_icon.png"></a>
+            <a href="mailto:rykov812@gmail.com"><img src="img/email.png"></a>
         </div>
     </div>
 
