refactor & add new projects & resize images

--- a/apps.html
+++ b/apps.html
@@ -11,7 +11,7 @@
 
     <div id="header">
         /<a href="index.html">Home</a>/
-        <a href="apps.html">IOS - Apps</a>/
+        <a href="apps.html">Projects</a>/
     </div>
 
     <div id="center">
@@ -27,6 +27,20 @@
             <a href="selectel.html">
                 <img class="apps-img" src="img/002.jpg">
                 <div class="apps-txt"><p>Selectel.Тикеты</p></div>
+            </a>
+        </div>
+
+        <div class="apps">
+            <a href="earlyvlog.html">
+                <img class="apps-img" src="img/003.jpg">
+                <div class="apps-txt"><p>Early Vlog</p></div>
+            </a>
+        </div>
+
+        <div class="apps">
+            <a href="mypocket.html">
+                <img class="apps-img" src="img/004.jpg">
+                <div class="apps-txt"><p>My Pocket</p></div>
             </a>
         </div>
 
