add block with skills

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
         <div id="box_text">
             <p style="margin-bottom: 8px;font-size: 20px;">Igor Rykov</p>
             <p style="margin-bottom: 3px;">iOS-Developer • ex QA Engineer</p>
-            <p>Saint - Petersburg</p>
+            
+            <br>
+            <p>Skills:</p>
+            <p><g style="text-decoration: underline; color: #3898ec;">iOS:</g> Swift/Objective-C + MVP/VIPER + CocoaPods(Alamofire, PinLayout, Locksmith, Firebase, YandexMobileMetrica.. and other) + MacOS</p>
+            <p><g style="text-decoration: underline; color: #3898ec;">Android:</g> Kotlin + MVC</p>
+            <p><g style="text-decoration: underline; color: #3898ec;">Backend:</g> Node.js + Express + Mongo</p>
+            <p><g style="text-decoration: underline; color: #3898ec;">Frontend:</g> Angular</p>
+            
         </div>
 
         <div class="imgs">
