add new app fix layout
add work history

--- a/apps.html
+++ b/apps.html
@@ -17,10 +17,11 @@
     <div id="center">
 
         <div class="apps">
-            <a href="pilki.html">
-                <img class="apps-img" src="img/001.jpg">
-                <div class="apps-txt"><p>Пилки</p></div>
+            <a href="mypocket.html">
+                <img class="apps-img" src="img/004.jpg">
+                <div class="apps-txt"><p>My Pocket</p></div>
             </a>
+            <div><span style="color: white;">Июнь 2017 - Август 2017</span></div>
         </div>
 
         <div class="apps">
@@ -28,6 +29,15 @@
                 <img class="apps-img" src="img/002.jpg">
                 <div class="apps-txt"><p>Selectel.Тикеты</p></div>
             </a>
+            <div><span style="color: white;">Октябрь 2017 - Февраль 2018</span></div>
+        </div>
+
+        <div class="apps">
+            <a href="pilki.html">
+                <img class="apps-img" src="img/001.jpg">
+                <div class="apps-txt"><p>Пилки</p></div>
+            </a>
+            <div><span style="color: white;">Февраль 2018 - Июнь 2018</span></div>
         </div>
 
         <div class="apps">
@@ -35,13 +45,15 @@
                 <img class="apps-img" src="img/003.jpg">
                 <div class="apps-txt"><p>Early Vlog</p></div>
             </a>
+            <div><span style="color: white;">Апрель 2018 - Декабрь 2021</span></div>
         </div>
 
         <div class="apps">
-            <a href="mypocket.html">
-                <img class="apps-img" src="img/004.jpg">
-                <div class="apps-txt"><p>My Pocket</p></div>
+            <a href="selfemployed.html">
+                <img class="apps-img" src="img/005.jpg">
+                <div class="apps-txt"><p>Мой налог</p></div>
             </a>
+            <div><span style="color: white;">Июль 2018 - настоящее время</span></div>
         </div>
 
         <div class="clr"></div>
